# High-performance-network-monitoring-tool

./: Cargo.toml  build.rs
docs/: README.md
src/: analysis.rs  capture.rs  main.rs  ui.rs
src/ui/: dashboard.html
static/: index.html
