[package]
name = "high-performance-network-monitoring-tool"
version = "0.1.0"
authors = ["Your Name <your.email@example.com>"]
edition = "2018"

# Dependencies
[dependencies]
pcap = "0.9"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
warp = "0.3" 
futures-util = "0.3"

